Working prototype. Synchronization added. One use can be logged in from multiple devices and all changes are synchronized from database 1 second apart. Redirection bug fixed: failing to provide correct password doesn't break the redirection anymore. Real time change is always live and tim-out removed.

--- a/styl/sty.css
+++ b/styl/sty.css
@@ -12,6 +12,7 @@ body {
     margin: auto;
     width: 800px;
     min-height: 100%;
+    font-family: 'Play', sans-serif;
 }
 
 html {
